<resources>
    <string name="app_name">RoutePlanning_App</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="map_not_ready">Map is not ready yet</string>

    <string name="zoom_buttons">Zoom Buttons</string>
    <string name="compass">Compass</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="zoom_gestures">Zoom Gestures</string>

    <string name="tilt">Tilt Gestures</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>

    <string name="rotate">Rotate Gestures</string>


    //map style
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>
    <string name="style_label_no_pois_no_transit">No POIs or transit</string>
    <string name="style_label_default">Default</string>

    <string name="style_choose">Choose style</string>
    <string name="style_set_to">Style set to: %1$s</string>
    <string name="swipe">\u2190 Swipe \u2192</string>




</resources>
