<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="com.androidtutorialpoint.googlemapsdistancecalculator.MapsActivity"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <fragment
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">
                    <Button
                        android:id="@+id/btnDriving"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Optimization Mode" />

                    <Button
                        android:id="@+id/btnWalk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Short Line Mode" />
                </LinearLayout>

                <TextView
                    android:id="@+id/show_distance_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0C9F26"
                    android:textColorHighlight="@android:color/primary_text_dark"
                    android:textSize="30dp" />

            </LinearLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/zoom_buttons_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setZoomButtonsEnabled"
                        android:text="@string/zoom_buttons" />

                    <CheckBox
                        android:id="@+id/compass_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setCompassEnabled"
                        android:text="@string/compass" />

                    <CheckBox
                        android:id="@+id/mylocationbutton_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:onClick="setMyLocationButtonEnabled"
                        android:text="@string/mylocation_button" />

                    <CheckBox
                        android:id="@+id/mylocationlayer_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:onClick="setMyLocationLayerEnabled"
                        android:text="@string/mylocation_layer" />

                    <CheckBox
                        android:id="@+id/scroll_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setScrollGesturesEnabled"
                        android:text="@string/scroll" />

                    <CheckBox
                        android:id="@+id/zoom_gestures_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setZoomGesturesEnabled"
                        android:text="@string/zoom_gestures" />

                    <CheckBox
                        android:id="@+id/tilt_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setTiltGesturesEnabled"
                        android:text="@string/tilt" />

                    <CheckBox
                        android:id="@+id/rotate_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="setRotateGesturesEnabled"
                        android:text="@string/rotate" />
                </LinearLayout>
            </ScrollView>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>



